--- a/package.json
+++ b/package.json
@@ -9,12 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "i18next": "^23.11.5",
+    "i18next-resources-to-backend": "^1.2.1",
+    "modern-normalize": "^2.0.0",
+    "next": "14.2.3",
+    "next-auth": "^4.24.7",
+    "next-connect": "^1.0.0",
+    "next-i18n-router": "^5.5.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-i18next": "^14.1.2",
+    "react-responsive": "^10.0.0"
   },
   "devDependencies": {
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "file-loader": "^6.2.0",
+    "url-loader": "^4.1.1"
   }
 }
