--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "next-i18n-router": "^5.5.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-h5-audio-player": "^3.9.1",
     "react-i18next": "^14.1.2",
+    "react-player": "^2.16.0",
     "react-responsive": "^10.0.0"
   },
   "devDependencies": {
