--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "hls.js": "^1.5.11",
     "i18next": "^23.11.5",
     "i18next-resources-to-backend": "^1.2.1",
     "modern-normalize": "^2.0.0",
@@ -22,7 +23,8 @@
     "react-h5-audio-player": "^3.9.1",
     "react-i18next": "^14.1.2",
     "react-player": "^2.16.0",
-    "react-responsive": "^10.0.0"
+    "react-responsive": "^10.0.0",
+    "swiper": "^11.1.4"
   },
   "devDependencies": {
     "eslint": "^8",
