--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18",
     "react-h5-audio-player": "^3.9.1",
     "react-i18next": "^14.1.2",
+    "react-loader-spinner": "^6.1.6",
     "react-player": "^2.16.0",
     "react-responsive": "^10.0.0",
     "swiper": "^11.1.4"
