--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
     "hls.js": "^1.5.11",
     "modern-normalize": "^2.0.0",
@@ -21,8 +22,8 @@
     "react-i18next": "^14.1.2",
     "react-loader-spinner": "^6.1.6",
     "react-player": "^2.16.0",
-    "react-responsive": "^10.0.0",
-    "swiper": "^11.1.4"
+    "react-redux": "^9.1.2",
+    "react-responsive": "^10.0.0"
   },
   "devDependencies": {
     "eslint": "^8",
