--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^14.2.4",
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
     "hls.js": "^1.5.11",
